[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/World/Dungeon/Scripts/Key_Gate.gd" type="Script" id=1]
[ext_resource path="res://Sprites/World_spritesheet_16x16.png" type="Texture" id=2]
[ext_resource path="res://Assets/TextBox/Text_Box.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 15.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 28 )

[node name="Key_Gate" type="Area2D"]
position = Vector2( 8, 72 )
script = ExtResource( 1 )

[node name="gate_1" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 2 )
hframes = 9
vframes = 18
frame = 39

[node name="gate_2" type="Sprite" parent="."]
position = Vector2( 0, 16 )
rotation = -1.5708
texture = ExtResource( 2 )
hframes = 9
vframes = 18
frame = 39

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 7.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Text_Box" parent="CanvasLayer/Control" instance=ExtResource( 3 )]
visible = false
show_behind_parent = true

[connection signal="body_entered" from="." to="." method="_on_Key_Gate_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Key_Gate_body_exited"]
[connection signal="on_end_dialog" from="CanvasLayer/Control/Text_Box" to="." method="_on_Text_Box_on_end_dialog"]
